fixed missing background on countries pages

--- a/countries.css
+++ b/countries.css
@@ -21,7 +21,7 @@ body {
     line-height: 1.5;
     font-family: 'Tenor Sans', sans-serif;
     color: #414141;
-    background: pink;
+    background: white;
     overflow-x: hidden;
 }
 
